# links-shortener

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build-arm.yml
backend/: .env.prod  Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_init.sql
backend/src/: logging.rs  main.rs  metrics.rs  tracing.rs  url_service.rs
backend/src/migrations/: mod.rs  runner.rs
frontend/: .htpasswd  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: AnalyticsDisplay.css  AnalyticsDisplay.jsx
frontend/src/services/: api.js
